<!DOCTYPE resources [<!ENTITY table_temp_docso "#docsotemp"><!ENTITY table_docso "Docso1"><!ENTITY table_khachhang "KhachHang1"><!ENTITY table_giamsat "GiamSatHanhTrinh1"><!ENTITY table_hinhdhn "Docsoth_hinh..HinhDHN1">]>

<resources>
    <string name="app_name">Đọc số Tân Hòa</string>
    <string name="title_activity_login">Đọc số Tân Hòa</string>
    <string name="title_activity_doc_so">Đọc số</string>
    <string name="title_activity_chup_anh">Chụp ảnh</string>
    <string name="title_activity_quan_ly_doc_so">Quản lý đọc số</string>

    <string name="preference_username">Username</string>
    <string name="preference_password">Password</string>
    <string name="preference_dot">Dot</string>
    <string name="preference_ky">Ky</string>
    <string name="preference_nam">Nam</string>
    <string name="preference_tenNV">tenNV</string>
    <string name="preference_sdtNV">sdt</string>

    <string name="title_activity_scan">Quét mã vạch</string>
    <string name="title_activity_main">Đọc số Tân Hòa</string>
    <string name="save_theme">theme</string>
    <string name="action_connect_bluetooth">Kết nối máy in</string>
    <string name="action_fix_not_update">Sửa lỗi không đồng bộ được</string>
    <string name="action_fix_no_consumn">Sửa lỗi không có chỉ số</string>
    <string name="action_select_folder">Chọn quyển</string>
    <string name="action_show_hide_print">Hiện/ẩn nút in GBTN</string>
    <string name="action_log_out">Đăng xuất</string>
    <string name="action_change_theme">Đổi màu nền</string>
    <string name="action_change_password">Đổi mật khẩu</string>

    <string name="hint_username">Tên đăng nhập</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_old_password">Mật khẩu cũ</string>
    <string name="hint_new_password">Mật khẩu mới</string>
    <string name="hint_confirm_password">Nhập lại mật khẩu mới</string>

    <string name="quit">Thoát ứng dụng Đọc số Tân Hòa?</string>
    <string name="ok">Đồng ý</string>
    <string name="cancel">Hủy</string>
    <string name="edit">Sửa</string>
    <string name="add">Thêm</string>

    <string name="dotExist_title">Đọc vét</string>
    <string name="dotExist_message">Hiện tại còn những đợt trước chưa đọc xong. Người dùng có thể chọn đợt để đọc vét.</string>

    <string name="disconnect_title">Không có kết nối internet!</string>
    <string name="disconnect_message">Kiểm tra kết nối internet và thử lại!</string>
    <string name="no_connect">Kiểm tra kết nối internet và thử lại!</string>
    <string name="connecting">Đang kết nối máy chủ…</string>
    <string name="initializing">Đang khởi tạo ứng dụng…</string>
    <string name="checking_login">Đang kiểm tra thông tin đăng nhập…</string>
    <string name="checking_login_username">Đang lấy số máy…</string>
    <string name="change_password_success">Đổi mật khẩu thành công!</string>
    <string name="ques_login_this_account">Đăng nhập với tài khoản này?</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="login_fail">Đăng nhập thất bại!</string>
    <string name="login_with_saved_account">Đang đăng nhập với tài khoản trước…</string>

    <string name="extra_username">username</string>
    <string name="extra_password">password</string>
    <string name="extra_staffname">staffname</string>
    <string name="extra_staffPhone">staffPhone</string>
    <string name="extra_dot">dot</string>
    <string name="extra_ky">ky</string>
    <string name="extra_nam">nam</string>

    <string name="path_saveImage">.docsotanhoa</string>

    <string name="load_danhbo_title">Đang tải danh bộ…</string>
    <string name="save_danhbo_title">Đang lưu danh bộ…</string>
    <string name="load_danhbo_message">Giữ kết nối mạng ổn định trong quá trình tải danh bộ!</string>
    <string name="load_danhbo_error">Tải danh bộ thất bại!</string>
    <string name="load_danhbo_complete">Đã tải xong danh bộ!</string>

    <string name="search_title">Tìm kiếm</string>
    <string name="search_mlt">theo mã lộ trình</string>
    <string name="search_danhbo">theo danh bộ</string>
    <string name="search_tenKH">theo tên khách hàng</string>
    <string name="search_diaChi">theo địa chỉ</string>

    <string name="call_errorNotFind">Lỗi không tìm thấy số điện thoại!</string>
    <string name="call_errorNotMatch">Lỗi chứa ký tự đặc biệt</string>

    <string name="UI_Theme_1">Sáng</string>
    <string name="UI_Theme_2">Tối</string>
    <string name="UI_Theme_3">Xanh</string>

    <string name="alert_sdt_title">Số điện thoại đã tồn tại</string>
    <string name="alert_sdt_message">Cần thay đổi số điện thoại?</string>

    <string name="alert_csm_lt_csc_title">Chỉ số mới nhỏ hơn chỉ số cũ</string>
    <string name="alert_csm_lt_csc_message">Kiểm tra danh bộ hiện tại thuộc diện thay mới đồng hồ?</string>
    <string name="alert_csm_fluctuation_title">Chỉ số tiêu thụ</string>
    <string name="alert_csm_fluctuation_message_low">Chỉ số tiêu thụ đang thấp hơn so với mức trung bình.\nVẫn lưu?</string>
    <string name="alert_csm_fluctuation_message_high">Chỉ số tiêu thụ đang cao hơn so với mức trung bình.\nVẫn lưu?</string>
    <string name="info_login_empty">Tên đăng nhập hoặc mật khẩu không được để trống</string>
    <string name="validate_login_fail">Sai tên đăng nhập hoặc mật khẩu</string>
    <string name="alert_imgLowQuatity_Title">Ảnh chụp kém chất lượng!</string>
    <string name="alert_imgLowQuatity_Message">Vui lòng chụp lại hình ảnh khác</string>
    <string name="alert_captureBefore">Vui lòng chụp hình trước khi nhập chỉ số mới</string>

    <string name="upload_danhbo_title">Đang đồng bộ dữ liệu đọc số…</string>
    <string name="upload_danhbo_message">Giữ kết nối mạng ổn định trong quá trình đồng bộ!</string>

    <string name="flag_unread">Chưa đọc</string>
    <string name="flag_read">Đã đọc</string>
    <string name="flag_sych">Đã đồng bộ</string>
    <string name="flag_code_f">Nhà đóng cửa</string>

    <string name="ket_qua_location_loc">ket qua location</string>
    <string name="ket_qua_location_long">ket qua location mLongtitude</string>
    <string name="ket_qua_location_lat">ket qua location mLatitude</string>

    <!--Sql begin-->

    <string name="sql_table_name_docso">&table_docso;</string>
    <string name="sql_table_name_khachhang">&table_khachhang;</string>
    <string name="sql_table_name_giamsat">&table_giamsat;</string>
    <string name="sql_table_name_hinhdhn">&table_hinhdhn;</string>

    <string name="sql_update_docso">UPDATE top (1) &table_docso; SET CSMOI=?, CODEMoi=?, GhiChuDS=?,
        tieuthumoi =?, gioghi = ?, sdt = ?, vitrimoi = ?,tiennuoc = ?, bvmt = ?, thue = ?, tongtien
        = ?, ttdhnmoi=? WHERE docsoId = ? </string>

    <string name="sql_update_ds_from_temp_table">update ds set ds.csmoi = temp.csmoi, ds.codemoi =
        temp.codemoi, ds.ghichuds = temp.ghichuds, ds.tieuthumoi = temp.tieuthumoi, ds.gioghi =
        temp.gioghi, ds.sdt = temp.sdt, ds.vitrimoi = temp.vitrimoi, ds.tiennuoc = temp.tiennuoc,
        ds.bvmt = temp.bvmt, ds.thue = temp.thue, ds.tongtien = temp.tongtien, ds.ttdhnmoi =
        temp.ttdhnmoi from &table_docso; ds inner join &table_temp_docso; temp on ds.DocSoID =
        temp.DocSoID</string>

    <string name="sql_update_kh_from_temp_table"> update kh set kh.somoi = temp.sonhamoi, kh.duong = temp.duong
        from &table_khachhang; kh inner join &table_temp_docso; temp on kh.danhba = right(temp.docsoid,11)</string>

    <string name="sql_create_temp_table_1">if OBJECT_ID(\'tempdb.dbo.&table_temp_docso;\') is not null
        drop table &table_temp_docso;</string>
    <string name="sql_create_temp_table_2">select docsoid, csmoi, codemoi, ghichuds, tieuthumoi, gioghi,
        sdt, vitrimoi, tiennuoc, bvmt, thue, tongtien, ttdhnmoi,sonhamoi,duong into &table_temp_docso;
        from docso where 1 = 0;</string>
    <string name="sql_insert_temp_table">insert into &table_temp_docso; (csmoi, codemoi, ghichuds,
        tieuthumoi, gioghi, sdt, vitrimoi, tiennuoc, bvmt, thue, tongtien, ttdhnmoi,sonhamoi,duong,
        docsoid) values(?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)</string>

    <string name="sql_update_giamsat">update &table_giamsat; set longtitude =?, latitude =?,
        thoigian =? where id =?</string>
    <string name="sql_insert_giamsat">insert into &table_giamsat; (id, nhanvien, longtitude,
        latitude, thoigian) values(?,?,?,?,?)</string>

    <string name="sql_update_hinhdhn">update &table_hinhdhn; set Image = ?, CreateDate =?
        where hinhdhnid = ?</string>
    <string name="sql_gethinhdhnid_hinhdhn">select HinhDHNID from &table_hinhdhn; where danhbo = ?
        order by CreateDate desc</string>
    <string name="sql_delete_hinhdhn">if exists (select danhbo from &table_hinhdhn; where hinhdhnid = ?)
        delete from &table_hinhdhn; where hinhdhnid = ?</string>
    <string name="sql_insert_hinhdhn"> INSERT INTO &table_hinhdhn; VALUES(?,?,?,?) </string>

    <string name="sql_getngaykiem_thongbao">select top 1 ngaykiem from thongbao where danhba = ?
        order by ngaykiem desc</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!--Sql end-->
</resources>
