<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ditagis.hcm.docsotanhoa.MainActivity">
    <item
        android:id="@+id/action_connect_bluetooth"
        android:orderInCategory="100"
        android:title="@string/action_connect_bluetooth"
        app:showAsAction="never" />
    <!--<item-->
        <!--android:id="@+id/action_fix_not_update"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/action_fix_not_update"-->
        <!--app:showAsAction="never" />-->
    <!--<item-->
        <!--android:id="@+id/action_fix_no_consume"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/action_fix_no_consumn"-->
        <!--app:showAsAction="never" />-->
    <item
        android:id="@+id/action_select_folder"
        android:orderInCategory="100"
        android:title="@string/action_select_folder"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_log_out"
        android:orderInCategory="100"
        android:title="@string/action_log_out"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_theme"
        android:orderInCategory="100"
        android:title="@string/action_change_theme"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_password"
        android:orderInCategory="100"
        android:title="@string/action_change_password"
        app:showAsAction="never" />
</menu>
